improved demo dwapp nfts, refectored valuation permissions
